force-app/main/default/objects/Global_Parameters__mdt/Global_Parameters__mdt.object-meta.xml
<CustomObject>
    <description>Paramètres globaux de l&#39;application</description>
    <label>Global Parameters</label>
    <pluralLabel>Global Parameters</pluralLabel>
</CustomObject>