force-app/main/default/objects/Global_Parameters__mdt/fields/Base_Url_All_iFrame_Hercule__c.field-meta.xml
<CustomField>
    <fullName>Base_Url_All_iFrame_Hercule__c</fullName>
    <label>Base Url All iFrame Hercule</label>
    <length>200</length>
    <type>Text</type>
</CustomField>