force-app/main/default/objects/Global_Parameters__mdt/fields/Base_Url_iFrame_VLO__c.field-meta.xml
<CustomField>
    <fullName>Base_Url_iFrame_VLO__c</fullName>
    <label>Base Url iFrame VLO</label>
    <length>200</length>
    <type>Text</type>
</CustomField>