force-app/main/default/objects/Global_Parameters__mdt/fields/Deployment_Level__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Level__c</fullName>
    <label>Deployment Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SATGE-PILOTE</fullName>
                <default>true</default>
                <label>SATGE-PILOTE</label>
            </value>
            <value>
                <fullName>SATGE-LOT1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>