force-app/main/default/objects/Global_Parameters__mdt/fields/Email_Compte_Inconnu__c.field-meta.xml
<CustomField>
    <fullName>Email_Compte_Inconnu__c</fullName>
    <label>Email Compte Inconnu</label>
    <length>50</length>
    <type>Text</type>
</CustomField>