force-app/main/default/objects/Global_Parameters__mdt/fields/EP_RCU_Account_Validation__c.field-meta.xml
<CustomField>
    <fullName>EP_RCU_Account_Validation__c</fullName>
    <label>EndPoint RCU / Account Validation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>