force-app/main/default/objects/Global_Parameters__mdt/fields/Name_Default_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_Default_Account__c</fullName>
    <description>Nom du compte générique</description>
    <label>Name Default Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>