force-app/main/default/objects/Global_Parameters__mdt/fields/Nom_Groupe_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Nom_Groupe_Chatter__c</fullName>
    <label>Nom Groupe Chatter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>