force-app/main/default/objects/Global_Parameters__mdt/fields/Payment_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Run_Time__c</fullName>
    <label>Heure d&#39;exécution Payment Run</label>
    <length>8</length>
    <type>Text</type>
</CustomField>