force-app/main/default/objects/Global_Parameters__mdt/fields/Queues_Belges__c.field-meta.xml
<CustomField>
    <fullName>Queues_Belges__c</fullName>
    <description>Nom des queues flammandes prises en compte dans le calcul des primes (séparés par des retour à la ligne).</description>
    <label>Queues Belges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>