force-app/main/default/objects/Global_Parameters__mdt/fields/Queues_Fran_aises__c.field-meta.xml
<CustomField>
    <fullName>Queues_Fran_aises__c</fullName>
    <description>Nom des queues francophones à prendre en compte dans le calcul des primes (séparés par des retours à la ligne).</description>
    <label>Queues Françaises</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>