force-app/main/default/objects/Global_Parameters__mdt/fields/Seuil_Alerte_Par_Heure__c.field-meta.xml
<CustomField>
    <fullName>Seuil_Alerte_Par_Heure__c</fullName>
    <label>Seuil Alerte Par Heure</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>