force-app/main/default/objects/Global_Parameters__mdt/fields/Sous_Motifs__c.field-meta.xml
<CustomField>
    <fullName>Sous_Motifs__c</fullName>
    <label>Sous-Motifs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>